--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ node_js:
 after_success:
   - npm install -g nyc
   - npm install -g codecov
-  - nyc --reporter lcov npm run coverage && codecov
+  - nyc --reporter lcov npm test && codecov
