oops, fix codecov run

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,6 @@ before_install:
   - nvm install 0.5.8
 
 after_success:
-  - if [ `node -p 'process.version.slice(0, 3)'` != "v8." ]; then exit; fi
-  - npm install -g nyc
-  - npm install -g codecov
+  - if [ `node -v` != "v5.8.0" ]; then exit; fi
+  - npm install -g nyc@8.4.0 codecov
   - nyc --reporter lcov npm test && codecov
